# missing-persons-db

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml
deploy/nginx/: Dockerfile  missing_persons.conf
deploy/postgres/: Dockerfile
missing_persons/: asgi.py  urls.py  wsgi.py
missing_persons/apps/dashboard/: urls.py
missing_persons/apps/dashboard/routes/: index.py  login.py
missing_persons/apps/dashboard/views/: __init__.py  index.py
missing_persons/apps/login/: managers.py  models.py
missing_persons/apps/login/admin/: users.py
missing_persons/apps/login/migrations/: 0001_initial.py
missing_persons/apps/login/utils/: email.py
missing_persons/common/: pagination.py  versioning.py
missing_persons/common/db/: fields.py  utils.py
missing_persons/conf/settings/: common.py  live.py  local.py
missing_persons/constants/: datetimes.py  deployment.py
missing_persons/utils/: admin.py  env.py  exceptions.py  http.py
mixins/: dashboard.py
templates/: base.html  confirm-delete.html  header.html  index.html  side-nav.html
templates/account/: base.html  login.html  password_reset.html  password_reset_from_key.html  password_reset_from_key_done.html
templates/account/emails/: contact-form.html  welcome.html
templates/dashboard/login/staff/: detail.html  form.html  list.html
templates/partials/: form-half.html  form.html
(+9 files in other folders)
